# solana-cctp-contracts

./: .env  .gitignore  .licenseignore  .prettierignore  Anchor.toml  Cargo.toml  README.md  SECURITY.md  package-lock.json  package.json  run.sh  tsconfig.json
.githooks/: pre-commit
.github/workflows/: ci.yml  clippy-ci.yml  miri.yml  radar.yml  sec3.yml  tarpaulin.yml
examples/: .env  .env.example  Anchor.toml  README.md  bridgeV2.ts  depositForBurn.ts  package-lock.json  package.json  receiveMessage.ts  receiveRawMessage.ts  utils.ts
examples/v2/: evm.ts  solana.ts  utilsV2.ts
programs/message-transmitter/: Cargo.toml  programs_message-transmitter.ll
programs/message-transmitter/src/: error.rs  events.rs  instructions.rs  lib.rs  message.rs  state.rs  utils.rs
programs/message-transmitter/src/instructions/: accept_ownership.rs  disable_attester.rs  enable_attester.rs  get_nonce_pda.rs  initialize.rs  is_nonce_used.rs  pause.rs  receive_message.rs  reclaim_event_account.rs  replace_message.rs  send_message.rs  send_message_with_caller.rs  set_max_message_body_size.rs  set_signature_threshold.rs  transfer_ownership.rs  unpause.rs  update_attester_manager.rs  update_pauser.rs
programs/token-messenger/: Cargo.toml
programs/token-messenger-minter/: Cargo.toml  programs_token-messenger-minter.ll
programs/token-messenger-minter/src/: lib.rs  token_messenger.rs  token_minter.rs  utils.rs
programs/token-messenger-minter/src/token_messenger/: burn_message.rs  error.rs  events.rs  instructions.rs  state.rs
programs/token-messenger-minter/src/token_messenger/instructions/: accept_ownership.rs  add_remote_token_messenger.rs  deposit_for_burn.rs  deposit_for_burn_with_caller.rs  handle_receive_message.rs  initialize.rs  remove_remote_token_messenger.rs  replace_deposit_for_burn.rs  transfer_ownership.rs
programs/token-messenger-minter/src/token_minter/: error.rs  events.rs  instructions.rs  state.rs
programs/token-messenger-minter/src/token_minter/instructions/: add_local_token.rs  burn_token_custody.rs  link_token_pair.rs  pause.rs  remove_local_token.rs  set_max_burn_amount_per_message.rs  set_token_controller.rs  unlink_token_pair.rs  unpause.rs  update_pauser.rs
programs/token-messenger/src/: lib.rs  token_minter.rs
programs/token-messenger/src/token_messenger/: events.rs  instructions.rs  state.rs
programs/token-messenger/src/token_minter/: error.rs  instructions.rs  state.rs
programs/v2/: Anchor.toml  Cargo.toml  package.json  rust-toolchain.toml
programs/v2/message-transmitter-v2/: Cargo.toml
programs/v2/message-transmitter-v2/src/: error.rs  events.rs  instructions.rs  lib.rs  message.rs  state.rs  utils.rs
programs/v2/message-transmitter-v2/src/instructions/: accept_ownership.rs  disable_attester.rs  enable_attester.rs  get_nonce_pda.rs  initialize.rs  is_nonce_used.rs  pause.rs  receive_message.rs  reclaim_event_account.rs  replace_message.rs  send_message.rs  send_message_with_caller.rs  set_max_message_body_size.rs  set_signature_threshold.rs  transfer_ownership.rs  unpause.rs  update_attester_manager.rs  update_pauser.rs
programs/v2/tests/: utils.ts
programs/v2/tests/message_transmitter/: test_client.ts  tests.ts
programs/v2/tests/token_messenger_minter/: test_client.ts  tests.ts
programs/v2/token-messenger-minter-v2/: Cargo.toml
programs/v2/token-messenger-minter-v2/src/: lib.rs  token_messenger_v2.rs  token_minter_v2.rs
programs/v2/token-messenger-minter-v2/src/token_messenger_v2/: burn_message.rs  error.rs  events.rs  instructions.rs  state.rs
programs/v2/token-messenger-minter-v2/src/token_messenger_v2/instructions/: accept_ownership.rs  add_remote_token_messenger.rs  denylist_account.rs  deposit_for_burn.rs  deposit_for_burn_with_caller.rs  deposit_for_burn_with_hook.rs  handle_receive_finalized_message.rs  handle_receive_message.rs  handle_receive_unfinalized_message.rs  initialize.rs  remove_remote_token_messenger.rs  replace_deposit_for_burn.rs  set_fee_recipient.rs  set_min_fee.rs  set_min_fee_controller.rs  transfer_ownership.rs  undenylist_account.rs  update_denylister.rs
programs/v2/token-messenger-minter-v2/src/token_minter_v2/: error.rs  events.rs  instructions.rs  state.rs
programs/v2/token-messenger-minter-v2/src/token_minter_v2/instructions/: add_local_token.rs  burn_token_custody.rs  link_token_pair.rs  pause.rs  remove_local_token.rs  set_max_burn_amount_per_message.rs  set_token_controller.rs  unlink_token_pair.rs  unpause.rs  update_pauser.rs
tests/: cctp.ts  utils.ts
tests/message-transmitter/: test_client.ts  tests.ts
tests/token_messenger_minter/: test_client.ts  tests.ts
workflows/: ci.yml
