[package]
name = "token-messenger-minter"
version = "0.1.0"
description = "Token Messenger and Minter for Cross-Chain Transfer Protocol"
authors = []
repository = "https://github.com/circlefin/solana-cctp-contracts"
categories = []
keywords = ["solana", "cctp", "bridge", "usdc", "circle"]
license = "Apache-2.0"
homepage = "https://www.circle.com/"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "token_messenger_minter"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
test = []

[dependencies]
anchor-lang = { version = "=0.28.0", features = ["event-cpi"] }
anchor-spl = "=0.28.0"
solana-program = "=1.16.9"
solana-security-txt = "=1.1.1"
num-traits = "=0.2.16"
message-transmitter = { path = "../message-transmitter", features = ["no-entrypoint", "cpi"] }
