[package]
name = "token-messenger"
version = "0.1.0"
description = "Token Messenger for Cross-Chain Transfer Protocol"
authors = ["Solana Maintainers <maintainers@solana.foundation>"]
repository = "https://github.com/circlefin/solana-cctp-contracts"
categories = ["finance"]
keywords = ["solana", "cctp", "bridge", "usdc", "circle"]
license = "Apache-2.0"
homepage = "https://solana.com/"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "token_messenger"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.28.0"
anchor-spl = "0.28.0"
solana-program = "1.16.4"
solana-security-txt = "1.1.1"
