[package]
name = "message-transmitter-v2"
version = "0.2.0"
description = "Message Transmitter for Cross-Chain Transfer Protocol V2"
repository = "https://github.com/circlefin/solana-cctp-contracts"
license = "Apache-2.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "message_transmitter_v2"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
idl-build = ["anchor-spl/idl-build", "anchor-lang/idl-build"]
default = []
test = []

[dependencies]
num-traits = "=0.2.19"
anchor-lang = { version = "=0.31.0", features = ["init-if-needed", "event-cpi"] }
anchor-spl = "=0.31.0"
solana-security-txt = "=1.1.1"
libsecp256k1 = "=0.7.1"
